Add element for score list and another game rule

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 <h1>Congratulations!</h1>
                 <p><span id="user">You</span> reached score <span id="end-score">0</span></p>
                 <p>Keep going! Train your brain.</p>
+                <h2>Scores List</h2>
+                <ol id="score-list">
+
+                </ol>
                 <button class="button" id="play-again-button">PLAY AGAIN</button>
                 <button class="button" id="main-menu-button">MAIN MENU</button>
             </div>
@@ -99,6 +103,7 @@
             <p><i class="fas fa-circle"></i> Then you have 5 second to find match.</p>
             <p><i class="fas fa-circle"></i> If you run out of time then the game is over.</p>
             <p><i class="fas fa-circle"></i> For every match you gain 1 point.</p>
+            <p><i class="fas fa-circle"></i> Score List is creating while you reach 1 or more points.</p>
             <p><i class="fas fa-circle"></i> Levels are endless.</p>
         </div>
     </div>
