Add style for score list

--- a/index.html
+++ b/index.html
@@ -80,13 +80,16 @@
     <div id="modal-game-over" class="modal">
         <div class="modal-content">
             <div class="modal-text-content">
-                <h1>Congratulations!</h1>
+                <h2>Congratulations!</h2>
                 <p><span id="user">You</span> reached score <span id="end-score">0</span></p>
                 <p>Keep going! Train your brain.</p>
-                <h2>Scores List</h2>
-                <ol id="score-list">
-
-                </ol>
+                <div class="score-list-wrapper">
+                    <span class="separator"></span>
+                    <h2>Scores List</h2>
+                    <ol id="score-list">
+    
+                    </ol>
+                </div>
                 <button class="button" id="play-again-button">PLAY AGAIN</button>
                 <button class="button" id="main-menu-button">MAIN MENU</button>
             </div>
