Removed tested autoprefixes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
-    <link rel="stylesheet" href="assets/css/test.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Find Me!</title>
 </head>
 
@@ -80,8 +80,8 @@
     <div id="modal-game-over" class="modal">
         <div class="modal-content">
             <div class="modal-text-content">
-                <h2>Congratulations!</h2>
-                <p><span id="user">You</span> reached score <span id="end-score">0</span></p>
+                <h2>Congratulations <span id="user"></span> !</h2>
+                <p>You reached score <span id="end-score"></span></p>
                 <p>Keep going! Train your brain.</p>
                 <div class="score-list-wrapper">
                     <span class="separator"></span>
