--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     </nav>
     <main class="page game-view">
         <section class="game-container">
+            <h2><span class="player"></span> is playing now.</h2>
             <figure class="main-pic-container">
-                <img class="main-pic">
+                <img src="assets/images/" alt="Main card in Find Me! Game" class="main-pic">
             </figure>
             <div class="game-stats-container">
                 <div class="game-stats">
@@ -41,39 +42,39 @@
             <div class="grid">
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="" alt="" class="card-front">
+                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
             </div>
         </section>
@@ -98,7 +99,7 @@
     <div id="modal-rules" class="modal">
         <div class="modal-content">
             <span class="close"><i class="fas fa-times-circle"></i></span>
-            <h1>Find me! game - to train your brain</h1>
+            <h2>Find me! game - to train your brain</h2>
             <p>The purpose of the game is to have fun with memorizing pictures as much as possible!</p>
             <p>There is no loosing or winning per se, the biggest win is to train your memory muscle.</p>
             <h2>Rules</h2>
