Update code to use nickname throughout the pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="page game-view">
         <section class="game-container">
-            <h2><span class="player"></span> is playing now.</h2>
+            <h2 class="game-header"><span class="player"></span> is playing now.</h2>
             <figure class="main-pic-container">
                 <img src="assets/images/" alt="Main card in Find Me! Game" class="main-pic">
             </figure>
@@ -82,7 +82,7 @@
     <div id="modal-game-over" class="modal">
         <div class="modal-content">
             <h2 id="game-over-header">Congratulations</h2>
-            <p>Your score was <span id="end-score">0</span></p>
+            <p><span class="player"></span> your score was <span id="end-score">0</span>.</p>
             <button class="button" id="play-again-button">PLAY AGAIN</button>
             <button class="button" id="main-menu-button">MAIN MENU</button>
         </div>
