Update input's placeholder

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h1>
         <span class="separator"></span>
         <form>
-            <input class="name-input" id="nickname" type="text" placeholder="nickname">
+            <input class="name-input" id="nickname" type="text" placeholder="Your nickname">
         </form>
         <button id="start" class="button">PLAY</button>
         <button id="scores" class="button">SCORES</button>
