--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div class="modal-content">
             <span class="close"><i class="fas fa-times-circle"></i></span>
             <h2>Scores Board</h2>
+            <p id="score-board-text">The score board is empty.</p>
             <ol id="score-list" class="score-list">
 
             </ol>
