Add favicon and missing file path

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="icon" sizes="192x192" href="assets/images/logo-blue.png" type="image/x-icon">
     <title>Find Me!</title>
 </head>
 
@@ -29,7 +30,7 @@
         <section class="game-container">
             <h2 class="game-header"><span class="player"></span> is playing now.</h2>
             <figure class="main-pic-container">
-                <img src="assets/images/" alt="Main card in Find Me! Game" class="main-pic">
+                <img src="assets/images/logo-blue.png" alt="Main card in Find Me! Game" class="main-pic">
             </figure>
             <div class="game-stats-container">
                 <div class="game-stats">
@@ -42,39 +43,39 @@
             <div class="grid">
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
-                    <img src="assets/images/" alt="Front of the card in Find Me! Game" class="card-front">
+                    <img src="assets/images/logo-blue.png" alt="Front of the card in Find Me! Game" class="card-front">
                 </figure>
             </div>
         </section>
