--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
     <main class="page game-view">
         <section class="game-container">
-            <h2 class="game-header"><span class="player"></span> is playing now.</h2>
+            <h2 class="game-header"><i id="back" class="fas fa-arrow-circle-left"></i> <span class="player"></span> is playing now.</h2>
             <figure class="main-pic-container">
                 <img src="assets/images/logo-blue.png" alt="Main card in Find Me! Game" class="main-pic">
             </figure>
@@ -80,6 +80,13 @@
             </div>
         </section>
     </main>
+    <div id="modal-default" class="modal">
+        <div class="modal-content">
+            <span class="close"><i class="fas fa-times-circle"></i></span>
+            <h2 class="title"></h2>
+            <p class="content"></p>
+        </div>
+    </div>
     <div id="modal-game-over" class="modal">
         <div class="modal-content">
             <h2 id="game-over-header">Congratulations</h2>
