--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <link rel="icon" sizes="192x192" href="assets/images/logo-blue.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <title>Find Me!</title>
 </head>
 
