--- a/index.html
+++ b/index.html
@@ -9,18 +9,23 @@
     <meta name="author" content="Klaudia Matysiak">
     <meta name="description" content="Find Me! Game">
     <meta name="url" content="https://klaudiamatysiak.github.io/find-me/">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" 
         integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" 
         crossorigin="anonymous" referrerpolicy="no-referrer" type="text/css">
-    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <!-- Favicon -->
     <link rel="icon" sizes="192x192" href="assets/images/logo-blue.png" type="image/x-icon">
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <!-- CSS style sheet -->
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Find Me!</title>
 </head>
 
 <body>
+    <!-- Home Page Navigation Menu -->
     <nav class="page menu-view">
         <h1 class="logo">
             <img alt="Find me! game - to train your brain" src="assets/images/logo-white.png">
@@ -33,12 +38,16 @@
         <button id="scores" class="button">SCORES</button>
         <button id="rules" class="button">RULES</button>
     </nav>
+    <!-- Main Page Game View -->
     <main class="page game-view">
         <section class="game-container">
+            <!-- Game header -->
             <h2 class="game-header"><i id="back" class="fas fa-arrow-circle-left"></i> <span class="player"></span> is playing now.</h2>
+            <!-- Main picture -->
             <figure class="main-pic-container">
                 <img src="assets/images/logo-blue.png" alt="Main card in Find Me! Game" class="main-pic">
             </figure>
+            <!-- Game stats Time and Score -->
             <div class="game-stats-container">
                 <div class="game-stats">
                     <span class="timer-text">Time</span>: <span class="time-value">0</span>
@@ -47,6 +56,7 @@
                     Score: <span class="score-value">0</span>
                 </div>
             </div>
+            <!-- Pictures Game Borad -->
             <div class="grid">
                 <figure class="card">
                     <img src="assets/images/logo-blue.png" alt="Fine Me! game logo" class="card-back">
@@ -87,6 +97,8 @@
             </div>
         </section>
     </main>
+    <!-- Modals -->
+    <!-- Used for two Warning modals -->
     <div id="modal-default" class="modal">
         <div class="modal-content">
             <span class="close"><i class="fas fa-times-circle"></i></span>
@@ -94,6 +106,7 @@
             <p class="content"></p>
         </div>
     </div>
+    <!-- Game Over Modal -->
     <div id="modal-game-over" class="modal">
         <div class="modal-content">
             <h2 id="game-over-header">Congratulations</h2>
@@ -102,6 +115,7 @@
             <button class="button" id="main-menu-button">MAIN MENU</button>
         </div>
     </div>
+    <!-- Scores Modal -->
     <div id="modal-scores" class="modal">
         <div class="modal-content">
             <span class="close"><i class="fas fa-times-circle"></i></span>
@@ -112,6 +126,7 @@
             </ol>
         </div>
     </div>
+    <!-- Rules Modal -->
     <div id="modal-rules" class="modal">
         <div class="modal-content">
             <span class="close"><i class="fas fa-times-circle"></i></span>
@@ -128,6 +143,7 @@
             <p><i class="fas fa-circle"></i> Levels are endless.</p>
         </div>
     </div>
+    <!-- Footer -->
     <footer class="footer">
         <a href="https://www.linkedin.com/in/klaudia-matysiak-99617a223/" target="_blank" rel="noopener" aria-label="linkedIn">
             <i class="fab fa-linkedin"></i>
