--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <span class="close"><i class="fas fa-times-circle"></i></span>
             <h2>Find me! game - to train your brain</h2>
             <p>The purpose of the game is to have fun with memorizing pictures as much as possible!</p>
-            <p>There is no loosing or winning per se, the biggest win is to train your memory muscle.</p>
+            <p>There is no losing or winning per se, the biggest win is to train your memory muscle.</p>
             <p>Do not under estimate it though, the game is challening.</p>
             <h2>Rules</h2>
             <p><i class="fas fa-circle"></i> You have 5 seconds to remember pictures on the board.</p>
